--- a/dtube/src/App.css
+++ b/dtube/src/App.css
@@ -1,13 +1,66 @@
 * {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* html {
   background-color: linear-gradient(45deg, #2196f3, #02aefb0d,#e91e63);
 } */
 
-.container {
-  padding: 30px;
+body {
+  /* background-color: #000; */
+  /* background-color: #111010; */
+  color: #fff;
+  background-color: #000000;
+}
+
+header {
+  background-color: #111010;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  height: 50px;
+}
+
+.poster-container {
+  margin-top: 110px;
+}
+
+.poster-item {
+  position: relative;
+  width: 15%;
+}
+
+.poster-text {
+  position: absolute;
+  bottom: 23px;
+  left: 21px;
+  padding: 14px;
+  width: 100%;
+  background: linear-gradient(to top, #0000009e, #0000009e, transparent);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.poster-img {
+  background-color: #111010;
+  width: 100%;
+  height: 320px;
+  object-fit: cover;
+  margin: 20px;
+  border-radius: 10px;
+}
+
+.container,
+main {
+  height: 100vh;
+  width: 100vw;
+  overflow-y: scroll;
+  /* padding: 30px; */
   /* display: flex;
   align-items: center;
   justify-content: center;
@@ -19,7 +72,13 @@
 .flex {
   display: flex;
   align-items: center;
-  
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .text-input {
@@ -29,33 +88,45 @@
   font-size: 1rem;
 }
 
-.text-lg{
-  font-size: 4rem;
+.text-lg {
+  font-size: 4.3rem;
+}
+
+.color-span {
+  /* color: #006aee; */
+
+  background: -webkit-linear-gradient(45deg, green, #006aee, orange, purple);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .btn {
-  background-color: #000;
+  /* background: linear-gradient(45deg, orange, #0039d9); */
   color: #fff;
   font-weight: bold;
   text-decoration: none;
   padding: 20px;
   border-radius: 10px;
-  border: 2px solid #000;
+  border: 2px solid;
+  border-color: #fff;
   user-select: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .btn:hover {
-  background: transparent;
+  background: #fff;
   color: #000;
 }
 
 .footer {
   /* border-top: 2px solid #f1f1f1; */
-  background-color: #fff;
+  /* background-color: #fff; */
   position: fixed;
   bottom: 0;
   width: 100vw;
-  padding: 50px;
+  padding: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
