--- a/dtube/src/App.css
+++ b/dtube/src/App.css
@@ -1,6 +1,7 @@
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-decoration: none;
 }
 
 /* html {
@@ -11,48 +12,137 @@ body {
   /* background-color: #000; */
   /* background-color: #111010; */
   color: #fff;
-  background-color: #000000;
+  background-color: #111111;
+}
+
+.pd-container {
+  padding: 30px;
+}
+
+.back-button {
+  width: -webkit-min-content;
+  width: min-content;
+  padding: 13px 23px;
+  border-radius: 100px;
+  padding-left: 15px;
+  cursor: pointer;
+  margin-left: -20px;
+  transition: 0.2s linear;
+}
+
+.back-button:hover {
+  margin-left: 0;
+  background: #04040475;
 }
 
 header {
-  background-color: #111010;
   position: fixed;
-  top: 0;
+  top: 0px;
   width: 100vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
-  height: 50px;
+  /* padding: 20px; */
+  height: 70px;
+  /* background: rgba(17, 16, 16, 0.74); */
+  background: #202020;
+  z-index: 10;
+  backdrop-filter: blur(26px);
+  /* border-bottom: 2px solid #ffffff0f; */
+}
+
+.header-wrapper {
+  width: 100%;
+  height: 100%;
+  padding: 0 20px;
+}
+
+.search-box {
+  width: 60%;
+  height: 30px;
+  padding: 6px 21px;
+  border: none;
+  border-radius: 49px;
+  background: #04040475;
+  font-size: 16px;
+  outline: none;
+  color: #fff;
+}
+
+.space-20 {
+  width: 20px;
+  height: 20px;
+}
+
+.space-40 {
+  width: 40px;
+  height: 40px;
+}
+
+.space-60 {
+  width: 60px;
+  height: 60px;
 }
 
 .poster-container {
-  margin-top: 110px;
+  margin-top: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  /* height: 30px; */
+  /* background-color: red; */
 }
 
 .poster-item {
   position: relative;
-  width: 15%;
+  width: 250px;
+  overflow: hidden;
+  margin: 13px;
 }
 
 .poster-text {
-  position: absolute;
-  bottom: 23px;
-  left: 21px;
-  padding: 14px;
   width: 100%;
-  background: linear-gradient(to top, #0000009e, #0000009e, transparent);
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+}
+
+.poster-title {
+  display: block;
+  margin: 10px 0;
+}
+
+.post-time {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  background: #111010a8;
+  padding: 3px 7px;
+  border-radius: 100px;
+  font-size: 12px;
+}
+
+.poster-address {
+  width: 100%;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: grey;
 }
 
 .poster-img {
   background-color: #111010;
   width: 100%;
-  height: 320px;
+  height: 150px;
   object-fit: cover;
-  margin: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s linear;
+  /* filter: brightness(0.8); */
+}
+
+.poster-img:hover {
+  /* transform: scale(1.2); */
+  filter: brightness(0.5);
 }
 
 .container,
@@ -81,11 +171,51 @@ main {
   flex-direction: column;
 }
 
+.flex-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .text-input {
   padding: 10px;
   border: 2px solid #000;
   border-radius: 10px;
   font-size: 1rem;
+}
+
+.text-input-2 {
+  background: transparent;
+  border: 2px solid;
+  border-color: #242424;
+  padding: 16px;
+  border-radius: 10px;
+  width: calc(90% + 15px);
+  outline: none;
+  font-size: 1rem;
+  color: #fff;
+}
+
+.file-selector {
+  background: #181818;
+  padding: 24px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+textarea {
+  /* border-radius: 10px; */
+  resize: vertical;
+}
+
+.grey-text {
+  color: grey;
+}
+
+.color-container {
+  background-color: #181818;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .text-lg {
@@ -99,6 +229,36 @@ main {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.btn-filled svg,
+.btn svg,
+.fade-btn svg {
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+.btn-filled {
+  height: 40px;
+  background: #006aee;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  color: #fff;
+  border-radius: 100px;
+  user-select: none;
+  border: 2px solid;
+  border-color: #006aee;
+  cursor: pointer;
+  transition: 0.3s linear;
+}
+
+.btn-filled:hover {
+  color: #006aee;
+  background-color: transparent;
 }
 
 .btn {
@@ -118,6 +278,11 @@ main {
 .btn:hover {
   background: #fff;
   color: #000;
+}
+
+.fade-btn {
+  background: #111111;
+  border-color: #111111;
 }
 
 .footer {
