--- a/dtube/src/App.css
+++ b/dtube/src/App.css
@@ -235,11 +235,41 @@ main {
   justify-content: space-between;
 }
 
+.flex-between-top {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
 .text-input {
   padding: 10px;
   border: 2px solid #000;
   border-radius: 10px;
   font-size: 1rem;
+}
+
+.playing-video-container {
+  /* background: red; */
+  /* padding: 100px; */
+  /* width: 100%; */
+  height: 70vh;
+  flex: 4;
+  position: sticky;
+  top: 70px;
+}
+
+.playing-video-element {
+  background: #111010;
+  height: 100%;
+  width: 100%;
+}
+
+.side-video-list {
+  /* background-color: blue; */
+  flex: 1;
+  padding: 30px;
+  padding-top: 0;
+  margin-top: -20px;
 }
 
 .text-input-2 {
