--- a/dtube/src/App.css
+++ b/dtube/src/App.css
@@ -6,6 +6,9 @@
 
 body {
   font-size: 0.9rem;
+  color: #3c4043;
+  /* color: #262e36; */
+  text-size-adjust: 100%;
   /* color: #fff; */
   /* background-color: #0e1217; */
 }
@@ -28,6 +31,11 @@ b {
   color: grey;
 }
 
+.ReactModal__Overlay,
+.ReactModal__Overlay--after-open {
+  box-shadow: inset 50px 1000px 20px 20px #00000063;
+}
+
 /* .cc {
   white-space: nowrap;
   overflow: hidden;
@@ -45,31 +53,33 @@ b {
   background-color: #fafafa;
   padding: 20px;
   border-radius: 10px;
-  border: 1px solid #9999991c;
+  border: 1px solid #00000014;
 }
 
 .tags-bar {
-  /* width: 100vw; */
+  /* width: 100%; */
   overflow-x: scroll;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #9999991c;
-  margin-top: 70px;
-  padding: 10px 20px;
+  border-bottom: 1px solid #00000014;
+  margin-top: 72px;
+  padding: 15px 20px;
 }
 
 .tag-item {
   white-space: nowrap;
-  background: #fafafa;
-  border: 1px solid #9999991c;
+  background: #f1f3f4;
+  border: 1px solid #00000014;
   border-radius: 100px;
+  width: -webkit-min-content;
   width: min-content;
   padding: 8px 16px;
   cursor: pointer;
   transition: 0.2s linear;
+  -webkit-user-select: none;
   user-select: none;
   margin-right: 10px;
-  /* font-weight: bold; */
+  font-weight: 500;
 }
 
 .tag-item:hover {
@@ -84,13 +94,14 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* padding: 20px; */
   height: 70px;
-  background: #fafafaeb;
+  background: #ffffffe8;
   z-index: 10;
   -webkit-backdrop-filter: blur(30px);
   backdrop-filter: blur(26px);
-  border-bottom: 1px solid #9999990f;
+  border-bottom: 1px solid #00000014;
+  /* padding: 20px; */
+  /* border-bottom: 1px solid #00000014; */
 }
 
 .header-wrapper {
@@ -100,7 +111,7 @@ header {
 }
 
 .avatar {
-  /* border: 1px solid #9999991c; */
+  /* border: 1px solid #00000014; */
   /* background: #0F1218; */
   border-radius: 100px;
   width: 60px;
@@ -128,7 +139,7 @@ header {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  /* border: 1px solid #9999991c; */
+  /* border: 1px solid #00000014; */
   /* color: #fff; */
 }
 
@@ -141,16 +152,61 @@ header {
 }
 
 .search-box {
-  width: 60%;
-  height: 30px;
+  background: #f1f3f4;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  border-radius: 8px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+
+  /* background: #f1f3f4;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  padding: 0 20px;
+  outline-color: #006aee33; */
+}
+
+.search-box svg {
+  color: #5f6367;
+}
+
+::placeholder {
+  color: #afb2b2;
+}
+
+.search-box input {
+  /* background: #f1f3f4;
+  border: 1px solid rgba(0, 0, 0, 0.05); */
+  /* border-radius: 8px; */
+  /* margin-left: auto; */
+  /* margin-right: auto; */
+
+  margin-left: 10px;
+  border: none;
+  width: 100%;
+  position: relative;
+  height: 45px;
+  outline: none;
+  background-color: transparent;
+  font-weight: 500;
+
+  /* padding: 0 20px; */
+  /* outline-color: #006aee33; */
+
+  /* -webkit-transition: background 100ms ease-in, width 100ms ease-out; */
+  /* transition: background 100ms ease-in, width 100ms ease-out; */
+
+  /* width: 60%;
+  height: 40px;
   padding: 4px 12px;
   border: none;
   border-radius: 10px;
   background: #fff;
-  /* font-size: 16px; */
   outline: none;
+  border: 1px solid #00000014; */
+  /* font-size: 16px; */
   /* color: #fff; */
-  border: 1px solid #e3e3e3;
+  /* border: 1px solid #e3e3e3; */
 }
 
 .space-5 {
@@ -184,34 +240,55 @@ header {
 }
 
 main {
-  margin-top: -20px;
+  /* margin-top: -20px; */
   /* padding: 20px; */
   /* background: red; */
+  /* background-color: red; */
 }
 
-.main-wrapper-1 {
-  display: flex;
-  align-items: flex-start;
-  justify-content: start;
+.main-width-constraint {
+  /* background-color: red; */
   width: 80%;
   margin: auto;
-  padding: 20px 0;
-  flex-direction: column;
 }
 
-.main-wrapper-2 {
+.main-content-wrapper {
+  /* width: 90%; */
+
+  margin: auto;
+  padding: 20px 0;
+
+  /* background: red; */
+  /* display: flex;
+  align-items: flex-start;
+  justify-content: start;
+  width: 100%;
+  margin: auto;
+  padding: 20px 20px;
+  flex-direction: column; */
+}
+
+.main-wrapper {
   display: flex;
   align-items: flex-start;
   flex-wrap: wrap;
+  justify-content: center;
+
+  /* background-color: green; */
+  /* width: 80%;
+  margin: auto; */
+  /* background: red; */
 }
 
 .poster-item {
   position: relative;
-  width: 280px;
+  width: calc((100% / 5));
   overflow: hidden;
   margin: 20px 8px;
   margin-top: 0;
   cursor: pointer;
+
+  /* width: 270px; */
   /* background: #FAFAFA; */
   /* border: 1px solid #242424; */
 }
@@ -254,7 +331,7 @@ main {
 .poster-img-wrapper {
   background-color: #fafafa;
   width: 100%;
-  height: 150px;
+  height: 180px;
   overflow: hidden;
   /* cursor: pointer; */
   transition: 0.3s linear;
@@ -322,21 +399,11 @@ main {
 }
 
 .playing-video-container {
-  /* background: red; */
-  /* padding: 100px; */
-  /* width: 100%; */
-  height: 100vh;
-  flex: 4;
-  /* position: sticky; */
-  /* top: 70px; */
-  /* overflow-y: scroll; */
-  /* padding-bottom: 200px; */
 }
 
 .playing-video-text {
-  /* background-color: red; */
-  /* line-height: 0; */
-  margin-top: 20px;
+  padding: 20px;
+  flex: 1;
 }
 
 .playing-video-title {
@@ -344,24 +411,18 @@ main {
 }
 
 .playing-video-element {
-  background: #fafafa;
-  /* object-fit: cover; */
-  height: 80%;
+  background: #000;
+  height: calc(100vh - 128px);
   width: 100%;
 }
 
 .playing-video-tag-item {
-  background: #fafafa;
   margin-right: 10px;
-  padding: 7px;
-  /* color: #fff; */
-  border: 1px solid;
-  border-color: #fafafa;
-  /* font-size: 14px; */
-  /* color: #ebebeb8f; */
+  padding: 7px 10px;
   cursor: pointer;
-  border-radius: 10px;
+  border-radius: 100px;
   transition: 0.2s linear;
+  border: 1px solid #00000014;
 }
 
 .playing-video-tag-item:hover {
@@ -370,36 +431,28 @@ main {
 }
 
 .side-video-list {
-  /* background-color: #FAFAFA; */
   flex: 1;
-  /* padding: 15px; */
-  /* padding-top: 0; */
-  /* margin-top: -20px; */
-  /* border: 1px solid #242424; */
   margin-left: 30px;
 }
 
 .text-input-2 {
   background: #fff;
-  border: 1px solid #9999991c;
+  border: 1px solid #00000014;
   padding: 16px;
   border-radius: 10px;
   width: calc(90% + 15px);
   outline: none;
-  /* font-size: 1rem; */
-  /* color: #fff; */
 }
 
 .file-selector {
   background: #fff;
-  border: 1px solid #9999991c;
+  border: 1px solid #00000014;
   padding: 24px;
   cursor: pointer;
   border-radius: 10px;
 }
 
 textarea {
-  /* border-radius: 10px; */
   resize: vertical;
 }
 
@@ -412,10 +465,9 @@ textarea {
 }
 
 .color-span {
+  color: #000000;
   /* color: #006aee; */
-
-  /* background: -webkit-linear-gradient(45deg, green, #006aee, orange, purple); */
-  background: -webkit-linear-gradient(
+  /* background: -webkit-linear-gradient(
     45deg,
     red,
     orange,
@@ -426,7 +478,7 @@ textarea {
   );
   background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
 }
 
 .btn-filled svg,
@@ -455,7 +507,7 @@ textarea {
   padding: 0 20px;
   /* height: 20px; */
   color: #fff;
-  border-radius: 100px;
+  border-radius: 10px;
   user-select: none;
   border: 1px solid;
   border-color: #006aee;
@@ -469,14 +521,16 @@ textarea {
 }
 
 .btn {
-  /* background: linear-gradient(45deg, orange, #0039d9); */
-  color: #fff;
+  /* background: linear-gradient(
+45deg, orange, #0039d9); */
+  /* color: #fff; */
   font-weight: bold;
   text-decoration: none;
   padding: 20px;
   border-radius: 10px;
   border: 1px solid;
-  border-color: #fff;
+  /* border-color: #fff; */
+  -webkit-user-select: none;
   user-select: none;
   outline: none;
   cursor: pointer;
