--- a/dtube/src/App.css
+++ b/dtube/src/App.css
@@ -33,7 +33,7 @@ b {
 
 .ReactModal__Overlay,
 .ReactModal__Overlay--after-open {
-  box-shadow: inset 50px 1000px 20px 20px #00000063;
+  box-shadow: inset 50px 1000px 20px 20px #0000008f;
 }
 
 /* .cc {
@@ -151,19 +151,41 @@ header {
   background: transparent;
 }
 
-.search-box {
-  background: #f1f3f4;
+.cancel-btn {
+  cursor: pointer;
+}
+
+.cancel-btn:hover {
+  color: #0069ee;
+}
+
+.search-container-wrapper {
+  position: absolute;
+  background-color: #0000008f;
+  top: 70px;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9;
+}
+
+.search-container {
+  padding: 20px;
   width: 50%;
+  margin: auto;
+  height: 100vh;
+  overflow-y: scroll;
+  background-color: #fff;
+}
+
+.search-box {
+  margin-left: 50px;
+  background: #f1f3f4;
+  width: 52%;
   display: flex;
   align-items: center;
   padding: 0 20px;
   border-radius: 8px;
   border: 1px solid rgba(0, 0, 0, 0.05);
-
-  /* background: #f1f3f4;
-  border: 1px solid rgba(0, 0, 0, 0.05);
-  padding: 0 20px;
-  outline-color: #006aee33; */
 }
 
 .search-box svg {
