--- a/dtube/src/App.css
+++ b/dtube/src/App.css
@@ -1,16 +1,17 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Nunito:wght@300;400;500;600;700&display=swap'); */
+
 * {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-decoration: none;
+  /* font-family: 'Nunito', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+      Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
 body {
   font-size: 0.9rem;
   color: #3c4043;
-  /* color: #262e36; */
   text-size-adjust: 100%;
-  /* color: #fff; */
-  /* background-color: #0e1217; */
 }
 
 b {
@@ -50,7 +51,8 @@ b {
 }
 
 .color-container {
-  background-color: #fafafa;
+  /* background-color: #fafafa; */
+  background-color: #f0f3f4;
   padding: 20px;
   border-radius: 10px;
   border: 1px solid #00000014;
@@ -190,19 +192,29 @@ header {
 
 .search-box svg {
   color: #5f6367;
+  transition: 0.2s linear;
+  cursor: pointer;
+  width: 18px;
+}
+
+.active-search-box {
+  /* background-color: #dadbdb; */
+  background-color: #0069ee1c;
+  border-radius: 100px;
+  width: 20px;
+  padding: 4px 8px;
+  stroke: #0069ee;
+  stroke-width: 3px;
 }
 
 ::placeholder {
+  font-size: 16px;
+  font-weight: normal;
   color: #afb2b2;
 }
 
 .search-box input {
-  /* background: #f1f3f4;
-  border: 1px solid rgba(0, 0, 0, 0.05); */
-  /* border-radius: 8px; */
-  /* margin-left: auto; */
-  /* margin-right: auto; */
-
+  padding-top: 3px;
   margin-left: 10px;
   border: none;
   width: 100%;
@@ -210,25 +222,6 @@ header {
   height: 45px;
   outline: none;
   background-color: transparent;
-  font-weight: 500;
-
-  /* padding: 0 20px; */
-  /* outline-color: #006aee33; */
-
-  /* -webkit-transition: background 100ms ease-in, width 100ms ease-out; */
-  /* transition: background 100ms ease-in, width 100ms ease-out; */
-
-  /* width: 60%;
-  height: 40px;
-  padding: 4px 12px;
-  border: none;
-  border-radius: 10px;
-  background: #fff;
-  outline: none;
-  border: 1px solid #00000014; */
-  /* font-size: 16px; */
-  /* color: #fff; */
-  /* border: 1px solid #e3e3e3; */
 }
 
 .space-5 {
@@ -326,9 +319,35 @@ main {
 }
 
 .poster-title {
+  /* font-weight: 500;
+  margin-bottom: 3px;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-lines: 2; */
+
+  font-weight: 500;
+  margin-bottom: 3px;
+  max-width: 100%;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+
+  /* white-space: nowrap; */
+  /* overflow: hidden; */
+  /* text-overflow: ellipsis; */
+  /* background: red; */
+  /* max-height: 37px; */
+}
+
+.poster-name {
+  margin-bottom: 3px;
   display: block;
-  margin: 10px 0;
-  /* font-weight: normal; */
 }
 
 .post-time {
@@ -378,6 +397,12 @@ main {
 .flex {
   display: flex;
   align-items: center;
+}
+
+.flex-wrap {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .flex-top {
@@ -439,8 +464,9 @@ main {
 }
 
 .playing-video-tag-item {
-  margin-right: 10px;
+  margin: 5px 10px;
   padding: 7px 10px;
+  width: max-content;
   cursor: pointer;
   border-radius: 100px;
   transition: 0.2s linear;
@@ -507,8 +533,8 @@ textarea {
 .btn svg,
 .fade-btn svg {
   margin-right: 10px;
-  width: 20px;
-  height: 20px;
+  width: 17px;
+  height: 17px;
   transition: 0.2s linear;
 }
 
@@ -522,14 +548,14 @@ textarea {
 .btn-filled {
   height: 40px;
   background: #006aee;
-  font-weight: bold;
+  font-weight: 500;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 20px;
   /* height: 20px; */
   color: #fff;
-  border-radius: 10px;
+  border-radius: 8px;
   user-select: none;
   border: 1px solid;
   border-color: #006aee;
@@ -546,7 +572,7 @@ textarea {
   /* background: linear-gradient(
 45deg, orange, #0039d9); */
   /* color: #fff; */
-  font-weight: bold;
+  font-weight: 500;
   text-decoration: none;
   padding: 20px;
   border-radius: 10px;
@@ -578,5 +604,5 @@ textarea {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
+  font-weight: 500;
 }
